--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+package-lock.json
 
 # Build
 dist/
@@ -24,7 +25,14 @@ Thumbs.db
 .env
 .env.local
 .env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Logs
 *.log
 logs/
+
+# Sistema
+*.tmp
+*.temp
